tests/baselines/reference/propertyNamedPrototype.js
//// [propertyNamedPrototype.ts]
class C {
    prototype: number; // ok
    static prototype: C; // error
}

//// [propertyNamedPrototype.js]
var C = (function () {
    function C() {
    }
    return C;
}());
